# gotmpl-rs

./: Cargo.toml  LICENSE  README.md  TODO.md
.github/: dependabot.yml  release-note.toml
.github/actions/setup-build-env/: action.yaml
.github/workflows/: release.yaml  test.yaml
benches/: Cargo.toml  README.md
benches/benches/: template.rs
benches/go/: template_test.go
examples/: custom_func.rs  simple.rs
src/: error.rs  exec.rs  funcs.rs  go.rs  lib.rs  value.rs
src/parse/: lexer.rs  mod.rs  node.rs  parser.rs
testdata/go_crosscheck/: main.go
tests/: go_compat.rs  rust_api.rs
