[package]
name = "gotmpl"
version = "0.1.0"
edition = "2024"
description = "A Rust reimplementation of Go's text/template library"
repository = "https://github.com/phsym/gotmpl-rs"
license = "MIT"
authors = ["Pierre-Henri Symoneaux"]
keywords = ["template", "golang", "templating", "parser", "no-std"]
categories = ["template-engine", "parser-implementations", "no-std", "text-processing"]

[features]
default = ["std"]
std = []
go-crosscheck = []

[dependencies]
thiserror = "2"
